--- a/src/app/components/About/hero/hero.module.css
+++ b/src/app/components/About/hero/hero.module.css
@@ -259,7 +259,7 @@
   .Hero_title__dKRr0 p {
     font-family: 'Exo', sans-serif;
     font-weight: 700;
-    font-size: x-large;
+    font-size: clamp(1.5rem , 5vw, 4rem);
   }
   
   .Hero_title__dKRr0 .stroke-text {
@@ -493,18 +493,18 @@
   .Hero_title__dKRr0,
   .Hero_title__dKRr0 p {
     font-family: 'SchibstedGrotesk_semibold', sans-serif;
-    font-size: 4.5rem;
+    font-size: clamp(1rem, calc(6vw + 1rem), 4rem);
     font-weight: 800;
   }
 
-  @media (max-width:30em) {
+  /* @media (max-width:30em) {
   .Hero_title__dKRr0,
   .Hero_title__dKRr0 p {
     font-family: 'SchibstedGrotesk_semibold', sans-serif;
     font-size: 3rem;
     font-weight: 800;
   }
-  }
+  } */
   
   .Hero_title__dKRr0 .stroke-text {
     fill-opacity: 0;
