--- a/src/app/components/Services/ProductCard/productCards.module.css
+++ b/src/app/components/Services/ProductCard/productCards.module.css
@@ -8,8 +8,18 @@
     justify-content: center;
 }
 
+@media (max-width:30em) {
+  
+.cardSectionTitle {
+  font: 600 2.3rem 'Exo_bold', sans-serif;
+  color: #2086ae;
+  text-align: left;
+}
+}
+
+
 .cardSection {
-    padding: 40px;
+    /* padding: 40px; */
     background-color: #f8f9fa;
   }
   
@@ -81,3 +91,20 @@
       margin: 15px auto;
     }
   }
+
+  @media (max-width: 48em) { 
+    .card {
+      width: 48%; 
+      margin: 0.625em; 
+    }
+  }
+  
+  @media (max-width: 30em) {
+    .card {
+      width: 44%; 
+      margin: 0.625em auto;
+      box-sizing: content-box;
+    }
+  }
+  
+  
