--- a/src/app/components/Careers/Hero/hero.module.css
+++ b/src/app/components/Careers/Hero/hero.module.css
@@ -1,60 +1,4 @@
-.TextAnimation_o-site-container__WQILD {
-    width: 100%;
-    max-width: 119.375rem;
-    margin: 0 auto;
-    padding-left: calc(4 * var(--space));
-    padding-right: calc(4 * var(--space));
-  }
-  
-  @media (min-width: 48em) {
-    .TextAnimation_o-site-container__WQILD {
-      padding-left: calc(10 * var(--space));
-      padding-right: calc(10 * var(--space));
-    }
-  }
-  
-  @media (min-width: 82.8125em) {
-    .TextAnimation_o-site-container__WQILD {
-      padding-left: calc(22 * var(--space));
-      padding-right: calc(22 * var(--space));
-    }
-  }
-  
-  .TextAnimation_text__sTrzf {
-    /* opacity: 0; */
-    display: flex;
-    flex-wrap: wrap;
-    column-gap: 1rem;
-    row-gap: 0.5rem;
-  }
-  
-  .TextAnimation_text__sTrzf .linecontainer,
-  .TextAnimation_text__sTrzf .word {
-    overflow: hidden;
-    overflow: clip;
-    display: inline-block;
-  }
-  
-  .TextAnimation_text__sTrzf .outline .word {
-    padding-right: 0.05em;
-  }
-  
-  .TextAnimation_text__sTrzf .char {
-    transform: translateY(100%) rotate(90deg);
-  }
-  
-  .TextAnimation_text__sTrzf .line> :not(:last-child) {
-    margin-right: 0.25em;
-  }
-  
-  .TextAnimation_text__sTrzf .linecontainer+.linecontainer:before {
-    content: " ";
-  }
-  
-  .TextAnimation_mounted__Iz2_c {
-    opacity: 1;
-  }
-  
+
   .Hero_o-site-container__yx9Gr {
     width: 100%;
     max-width: 119.375rem;
@@ -201,7 +145,7 @@
   
   .Hero_info__gmy_W{
     color: white;
-    margin-left: 3rem;
+    /* margin-left: 3rem; */
     font-family: 'Exo', sans-serif;
     font-size: medium;
     font-weight: 400;
@@ -223,7 +167,7 @@
   .Hero_title__dKRr0 p {
     font-family: 'Exo', sans-serif;
     font-weight: 700;
-    font-size: x-large;
+    font-size: medium;
   }
   
   .Hero_title__dKRr0 .stroke-text {
@@ -287,7 +231,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    gap: 1.5rem;
+    gap: 1rem;
     height: max-content;
     z-index: 2;
     position: relative;
@@ -313,22 +257,30 @@
   .Hero_imageWrapper__LRFS_ {
     grid-row: 1;
     z-index: 0;
-    object-fit: cover;
     height: 25rem;
     grid-column: span 4;
     background-color: #00112e;
     border-top-right-radius: 4rem;
     border-bottom-left-radius: 4rem;
-    display: flex;
-    overflow: hidden;
+    overflow: hidden; /* Ensures image stays within the wrapper */
     margin: 1.5rem calc(-4 * var(--space)) 0 calc(-4 * var(--space));
-  }
-  
-  @media (min-width: 48em) {
+}
+
+.Hero_imageWrapper__LRFS_ img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; 
+}
+
+@media (min-width: 48em) {
     .Hero_imageWrapper__LRFS_ {
-      margin: 0;
+        margin: 0;
+        overflow: hidden;
+        height: 100vh;
+        pointer-events: none; 
     }
-  }
+}
+
   
   @media (min-width: 71.3125em) {
     .Hero_imageWrapper__LRFS_ {
@@ -446,9 +398,9 @@
   }
   
   .Hero_title__dKRr0 {
+    margin-top: 2rem;
     color: #fff;
     z-index: 1;
-    margin-left: 3rem;
     position: relative;
     transition: color 0.3s ease-in-out;
   }
@@ -456,8 +408,18 @@
   .Hero_title__dKRr0,
   .Hero_title__dKRr0 p {
     font-family: 'SchibstedGrotesk_semibold', sans-serif;
-    font-size: 4.5rem;
+    font-size: 6rem;
     font-weight: 800;
+  }
+
+  @media (max-width:30em) {
+    .Hero_title__dKRr0,
+  .Hero_title__dKRr0 p {
+    font-family: 'SchibstedGrotesk_semibold', sans-serif;
+    font-size: 3rem;
+    font-weight: 800;
+  }
+    
   }
   
   .Hero_title__dKRr0 .stroke-text {
@@ -481,4 +443,10 @@
     justify-content: center;
     background-color: transparent;
     justify-content: flex-end;
+  }
+
+  .no-scroll {
+    overflow: hidden;
+    height: 100vh;
+    pointer-events: none; 
   }
