--- a/src/app/components/Careers/UspGrid/uspGrid.module.css
+++ b/src/app/components/Careers/UspGrid/uspGrid.module.css
@@ -1,4 +1,3 @@
-
 .UspGrid_o-site-container__l9I84 {
     width: 100%;
     max-width: 119.375rem;
@@ -107,10 +106,17 @@
     color: #00112e;
 }
 
-@media (min-width: 48em) {
+
+
+@media (max-width: 30em) {
     .UspGrid_titleWrapper__yGpjk {
         grid-column: span 12;
         margin-bottom: 5.5rem;
+        font-family: 'SchibstedGrotesk', sans-serif;
+        font-size: 2.8rem;
+        font-weight: 600;
+        grid-column: span 4;
+        margin-bottom: 2.5rem;
     }
 }
 
@@ -232,7 +238,7 @@
 }
 
 .UspTextCard_title__HNRuM {
-    font-family: 'Exo' ,sans-serif;
+    font-family: 'Exo', sans-serif;
     font-size: 2rem;
     font-weight: 700;
 }
@@ -242,7 +248,7 @@
 }
 
 .UspTextCard_info__KyRMi {
-    font-family: 'Exo' ,sans-serif;
+    font-family: 'Exo', sans-serif;
     font-size: 1rem;
     font-weight: 700;
 }
