--- a/src/app/components/Home/About/about.module.css
+++ b/src/app/components/Home/About/about.module.css
@@ -51,38 +51,6 @@
   }
 }
 
-.gold .AboutBlock_section__9WQmC .AboutBlock_imageWrapper__46_w_:after,
-.gold .AboutBlock_section__9WQmC .AboutBlock_videoWrapper__s0vxa:after {
-  background-color: #1f1c16;
-}
-
-@media (min-width: 48em) {
-
-  .gold .AboutBlock_section__9WQmC .AboutBlock_imageWrapper__46_w_,
-  .gold .AboutBlock_section__9WQmC .AboutBlock_videoWrapper__s0vxa {
-    border-top: 0.0625rem solid #f8ebcb;
-    border-right: 0.0625rem solid #f8ebcb;
-  }
-}
-
-.gold .AboutBlock_section__9WQmC .AboutBlock_textSection__toSlF:after {
-  background-color: #2c2713;
-}
-
-@media (min-width: 48em) {
-  .gold .AboutBlock_section__9WQmC .AboutBlock_textSection__toSlF {
-    border-bottom: 0.0625rem solid #f8ebcb;
-    border-right: 0.0625rem solid #f8ebcb;
-  }
-
-  .gold .AboutBlock_section__9WQmC .AboutBlock_textSection__toSlF:before {
-    border-bottom: 0.0625rem solid #f8ebcb;
-  }
-}
-
-.gold .AboutBlock_section__9WQmC .AboutBlock_infoSection__rhhGb:after {
-  background-color: #2c2713;
-}
 
 .Image_office{
   height: 25rem;
@@ -94,44 +62,6 @@
     width: auto;
   }
   
-}
-
-.gold .AboutBlock_section__9WQmC .AboutBlock_titleSmall__f0IN5 {
-  color: #f8ebcb;
-}
-
-.gold .AboutBlock_section__9WQmC .AboutBlock_titleSmall__f0IN5:before {
-  background: linear-gradient(180deg, #2c2713, hsla(0, 0%, 85%, 0));
-}
-
-.gold .AboutBlock_section__9WQmC .AboutBlock_info__jqTAN,
-.gold .AboutBlock_section__9WQmC .AboutBlock_titleLarge__hwrwt {
-  color: #f8ebcb;
-}
-
-.gold .AboutBlock_section__9WQmC .AboutBlock_cardtextWrapper__b06bU p {
-  color: #2c2713;
-}
-
-.gold .AboutBlock_section__9WQmC .AboutBlock_card__gxXEg {
-  background: #d0bb76;
-  background: linear-gradient(-45deg, #d0bb76, #ceaa53 65%);
-}
-
-.gold .AboutBlock_section__9WQmC .AboutBlock_cardImageWrapper__QcDd4 {
-  background-color: #1f1c16;
-}
-
-.gold .AboutBlock_section__9WQmC .AboutBlock_icon__lsHnW {
-  color: #1f1c16;
-}
-
-.gold .AboutBlock_section__9WQmC .AboutBlock_iconWrapper__JivBc {
-  background-color: #ceaa53;
-}
-
-.gold .AboutBlock_section__9WQmC .AboutBlock_cardtitle__zemEt {
-  color: #1f1c16;
 }
 
 .AboutBlock_container___ieX0 {
@@ -264,17 +194,17 @@
 
 .AboutBlock_titleLarge__hwrwt {
   z-index: 1;
-  grid-column: span 4;
+  grid-column: span 9;
   color: #fff;
   font-family: 'Exo_Bold', sans-serif;
-  font-size: 4rem;
+  font-size: 6rem;
   font-weight: 700;
 }
 
-@media (min-width: 48em) {
+@media (max-width: 30em) {
   .AboutBlock_titleLarge__hwrwt {
     font-family: 'Exo_Bold', sans-serif;
-    font-size: 6rem;
+    font-size: 3rem;
     font-weight: 700;
     grid-column: span 9;
   }
@@ -398,13 +328,13 @@
   position: relative;
 }
 
-@media (max-width : 48em) {
+@media (max-width : 30em) {
   .AboutBlock_titleSmall__f0IN5 {
   z-index: 1;
   grid-column: span 4;
   color: #fff;
   font-family: 'Exo', sans-serif;
-  font-size: 3rem;
+  font-size: 2rem;
   font-weight: 500;
   position: relative;
   }
@@ -433,11 +363,25 @@
 
 .AboutBlock_info__jqTAN {
   color: #fff;
-  line-height: 30px;
+  line-height: 35px;
   grid-column: span 4;
   font-family: 'Exo', sans-serif;
   font-weight: 200;
   font-size: larger;
+}
+
+@media (max-width:30em) {
+
+.AboutBlock_info__jqTAN {
+  margin-top: 2rem;
+  color: #fff;
+  line-height: 35px;
+  grid-column: span 4;
+  font-family: 'Exo', sans-serif;
+  font-weight: 200;
+  font-size: larger;
+}
+  
 }
 
 @media (min-width: 48em) {
@@ -748,140 +692,6 @@
 .darkmode .Button_primary__b__QL:focus .Button_icon__Rt_Hz .icon {
   color: #fff;
 }
-.gold .Button_primary__b__QL {
-  border: 0.0625rem solid #ac904c;
-}
-.gold .Button_primary__b__QL.Button_goldLight__ZvTNn {
-  border: 0.0625rem solid #ffd36a;
-}
-.gold
-  .Button_primary__b__QL.Button_goldLight__ZvTNn
-  .Button_titleWrapper__Glw9g {
-  color: #f8e2ac;
-}
-.gold .Button_primary__b__QL.Button_goldLight__ZvTNn .Button_icon__Rt_Hz {
-  background-color: #ceaa53;
-}
-.gold .Button_primary__b__QL.Button_goldLight__ZvTNn .Button_icon__Rt_Hz .icon {
-  color: #000;
-}
-.gold .Button_primary__b__QL.Button_goldLight__ZvTNn:hover .Button_icon__Rt_Hz {
-  background-color: #ffd36a;
-}
-.gold .Button_primary__b__QL.Button_goldLight__ZvTNn:active .Button_icon__Rt_Hz,
-.gold .Button_primary__b__QL.Button_goldLight__ZvTNn:focus .Button_icon__Rt_Hz {
-  background-color: #ac904c;
-}
-.gold .Button_primary__b__QL .Button_titleWrapper__Glw9g {
-  color: #2c2713;
-}
-.gold .Button_primary__b__QL .Button_icon__Rt_Hz {
-  background-color: #ffd36a;
-}
-.gold .Button_primary__b__QL .Button_icon__Rt_Hz .icon {
-  color: #2c2713;
-}
-.gold .Button_primary__b__QL:hover {
-  border: 0.0625rem solid #2c2713;
-}
-.gold .Button_primary__b__QL:hover .Button_icon__Rt_Hz {
-  background-color: #ac904c;
-}
-.gold .Button_primary__b__QL:hover .Button_icon__Rt_Hz .icon {
-  color: #2c2713;
-}
-.gold .Button_primary__b__QL:active,
-.gold .Button_primary__b__QL:focus {
-  border: 0.0625rem solid #2c2713;
-}
-.gold .Button_primary__b__QL:active .Button_icon__Rt_Hz,
-.gold .Button_primary__b__QL:focus .Button_icon__Rt_Hz {
-  background-color: #655631;
-}
-.gold .Button_primary__b__QL:active .Button_icon__Rt_Hz .icon,
-.gold .Button_primary__b__QL:focus .Button_icon__Rt_Hz .icon {
-  color: #fff;
-}
-.gold .Button_primary__b__QL.Button_darkmode__ozqJQ {
-  border: 0.0625rem solid #ffd36a;
-}
-.gold .Button_primary__b__QL.Button_darkmode__ozqJQ.Button_goldLight__ZvTNn {
-  border: 0.0625rem solid #ac904c;
-}
-.gold
-  .Button_primary__b__QL.Button_darkmode__ozqJQ.Button_goldLight__ZvTNn
-  .Button_titleWrapper__Glw9g {
-  color: #2c2713;
-}
-.gold
-  .Button_primary__b__QL.Button_darkmode__ozqJQ.Button_goldLight__ZvTNn
-  .Button_icon__Rt_Hz {
-  background-color: #ffd36a;
-}
-.gold
-  .Button_primary__b__QL.Button_darkmode__ozqJQ.Button_goldLight__ZvTNn
-  .Button_icon__Rt_Hz
-  .icon {
-  color: #2c2713;
-}
-.gold
-  .Button_primary__b__QL.Button_darkmode__ozqJQ.Button_goldLight__ZvTNn:hover {
-  border: 0.0625rem solid #2c2713;
-}
-.gold
-  .Button_primary__b__QL.Button_darkmode__ozqJQ.Button_goldLight__ZvTNn:hover
-  .Button_icon__Rt_Hz {
-  background-color: #ac904c;
-}
-.gold
-  .Button_primary__b__QL.Button_darkmode__ozqJQ.Button_goldLight__ZvTNn:hover
-  .Button_icon__Rt_Hz
-  .icon {
-  color: #2c2713;
-}
-.gold
-  .Button_primary__b__QL.Button_darkmode__ozqJQ.Button_goldLight__ZvTNn:active,
-.gold
-  .Button_primary__b__QL.Button_darkmode__ozqJQ.Button_goldLight__ZvTNn:focus {
-  border: 0.0625rem solid #2c2713;
-}
-.gold
-  .Button_primary__b__QL.Button_darkmode__ozqJQ.Button_goldLight__ZvTNn:active
-  .Button_icon__Rt_Hz,
-.gold
-  .Button_primary__b__QL.Button_darkmode__ozqJQ.Button_goldLight__ZvTNn:focus
-  .Button_icon__Rt_Hz {
-  background-color: #655631;
-}
-.gold
-  .Button_primary__b__QL.Button_darkmode__ozqJQ.Button_goldLight__ZvTNn:active
-  .Button_icon__Rt_Hz
-  .icon,
-.gold
-  .Button_primary__b__QL.Button_darkmode__ozqJQ.Button_goldLight__ZvTNn:focus
-  .Button_icon__Rt_Hz
-  .icon {
-  color: #fff;
-}
-.gold
-  .Button_primary__b__QL.Button_darkmode__ozqJQ
-  .Button_titleWrapper__Glw9g {
-  color: #f8e2ac;
-}
-.gold .Button_primary__b__QL.Button_darkmode__ozqJQ .Button_icon__Rt_Hz {
-  background-color: #ceaa53;
-}
-.gold .Button_primary__b__QL.Button_darkmode__ozqJQ .Button_icon__Rt_Hz .icon {
-  color: #000;
-}
-.gold .Button_primary__b__QL.Button_darkmode__ozqJQ:hover .Button_icon__Rt_Hz {
-  background-color: #ffd36a;
-}
-.gold .Button_primary__b__QL.Button_darkmode__ozqJQ:active .Button_icon__Rt_Hz,
-.gold .Button_primary__b__QL.Button_darkmode__ozqJQ:focus .Button_icon__Rt_Hz {
-  background-color: #ac904c;
-}
-
 .JobsCard_info__mr8vF p {
   font-family: 'SchibstedGrotesk_semibold', sans-serif;
   font-weight: 800;
