--- a/src/app/components/Home/Section/section.module.css
+++ b/src/app/components/Home/Section/section.module.css
@@ -131,19 +131,20 @@
 
 @media (max-width: 30em) {
     .CtaBlock_title__enemh {
-        font-family: 'Exo',sans-serif;
+        font-family: 'Exo_bold',sans-serif;
         font-size: 2rem;
         font-weight: 500;
         color: #2086ae;
+        margin-left: 18px;
     }
     
 }
 
 .CtaBlock_info__DVPeC {
-    margin-bottom: 1.5rem;
+    margin-bottom: 1rem;
     color: #00112e;
     font-family: 'Exo', sans-serif;
-    font-size: 1rem;
+    font-size: 1.1rem;
 }
 
 .CtaBlock_videoWrapper__ZHqAx {
@@ -157,6 +158,22 @@
     transition: all 0.3s ease-out;
     overflow: visible;
     border-top-left-radius: 2.5rem;
+}
+
+@media (max-width:30em) {
+    .CtaBlock_videoWrapper__ZHqAx {
+        width: 100%;
+        height:30rem;
+        margin-left: auto;
+        margin-right: auto;
+        grid-row: 1;
+        grid-column: span 4;
+        position: relative;
+        background-color: #fff;
+        transition: all 0.3s ease-out;
+        overflow: visible;
+        border-top-left-radius: 2.5rem;
+    }
 }
 
 .gold .CtaBlock_videoWrapper__ZHqAx {
