--- a/src/app/components/Home/footer/footer.module.css
+++ b/src/app/components/Home/footer/footer.module.css
@@ -71,12 +71,12 @@
   max-width: 119.375rem;
   margin: 0 auto;
   padding-left: calc(var(--space));
-  padding-right: calc(4 * var(--space));
+  padding-right: calc(var(--space));
   position: relative;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 3rem;
+  gap: 2rem;
 }
 @media (min-width: 48em) {
   .Footer_footerTop__XBqF3 {
@@ -93,12 +93,12 @@
 @media (min-width: 48em) {
   .Footer_footerTop__XBqF3 {
     flex-direction: row;
-    gap: 6rem;
+    gap: 2rem;
   }
 }
 .Footer_navWrapper__xWSoa {
   width: 100%;
-  grid-column: span 4;
+  grid-column: span 3;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -111,8 +111,7 @@
   .Footer_navWrapper__xWSoa {
     flex-direction: row;
     display: flex;
-    grid-column: span 4;
-    grid-column: 4 / span 4;
+    grid-column: span 2;
     justify-content: center;
   }
 }
@@ -130,8 +129,10 @@
 .Footer_logoWrapper__P93m7 {
   grid-column: span 4;
   width: 100%;
-  align-self: flex-start;
+  justify-content: center;
+  align-self: center;
 }
+
 @media (min-width: 48em) {
   .Footer_logoWrapper__P93m7 {
     width: -moz-fit-content;
@@ -390,6 +391,7 @@
 }
 
 .flipContainer {
+  margin-left: 20px;
   position: relative;
   width: 330px;
   height: 80px;
